fixed responsiveness and alignment issues

--- a/style.css
+++ b/style.css
@@ -1,10 +1,7 @@
-body{
-
-	
-	
+.nav-list1{
+    padding-top: 1.2%;
+    padding-bottom:1%;
 }
-
-
 #itopleft{
 	height: 33px;
 	width:  50px;
@@ -31,6 +28,12 @@ p.navbar-text {
 .container{
     max-width:970px;
 }
+.para-typo1{
+    line-height: 1.5em;
+}
+.socialmedia{
+    padding-top: 33%;
+}
 .form-group{
     
 }
@@ -38,23 +41,35 @@ h2{
    line-height: 1;
    margin-bottom: 15px;
 }
+
 .contactbox{
-    background-color: beige;
+    background-color:beige;
+    margin-bottom: 6%;
 }
+
 .form-group {
-    margin-left: 25%;
+  
     width: 88%;
 }
-.dropdown {
- 
-    width: 88%;
-}
-footer{
-    margin-top: 9%;
-}
+
+
  #generalinfo {
     margin-left: 7%;
 }
 .tablegroup{
     background-color: beige;
+}
+label{
+    padding-bottom: .3%;
+}
+footer{
+    line-height: 1.6em;
+}
+.footer-row-ln1{
+    font-weight: bold;
+}
+
+.footer-box{
+    background-color:beige;
+  
 }
